second commit with some animations

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 <h1 class="h1">About </h1>
                 <h1 class="h2">Me</h1>
             </div>
-            <div class="about-content">
+            <div class="about-content reveal2">
                 <p class="space-grotesk">I am <span>Shashank Sharma</span>, a dedicated Full Stack Web Developer and AI enthusiast with a passion for building impactful digital solutions. My journey in technology is fueled by a deep curiosity and a drive to turn ideas into reality through innovation and code. With expertise in front-end technologies like HTML, CSS, and React.js, coupled with back-end tools such as Node.js and Express.js, I bring a comprehensive approach to web development that ensures functionality meets aesthetic excellence.
                     <br>
                     <br>
@@ -47,7 +47,6 @@
                     Every project I undertake reflects my commitment to merging creativity,technology, and functionality to deliver solutions that truly make a difference. My ultimate goal is to use my skills to create digital  experiences that leave a lasting impact while staying at the forefront of innovation.
                     <br>
                     <br>
-                    When I’m not coding, you’ll find me diving into new technologies, brainstorming ideas, or exploring the vast potential of AI. For me, development isn’t just a profession—it’s a way to shape the future one  groundbreaking idea at a time. Let’s create something extraordinary together!
                 <div class="image">
                 
                 </div>
@@ -128,7 +127,7 @@
             <h1 class="h2">Me</h1>
         </div>
         <div id="page3">
-            <div class="con-con">
+            <div class="con-con reveal2">
                 <p>Have a project in mind or just want to connect? I’m always excited to collaborate on innovative ideas, solve challenging problems, or explore cutting-edge technologies together. Whether it’s building modern web applications, discussing AI innovations, or brainstorming the next big thing, I’d love to hear from you!
                     <br>
                     <br>
